# re_org

./: .gitignore
dev/usb_transceiver_3/usb_transceiver_3/: CMakeLists.txt  usb_transceiver_3.vcxproj  usb_transceiver_3.vcxproj.filters
dev/usb_transceiver_3/usb_transceiver_3/src/: epconst.c  stuff.c  usb_transceiver.cpp  usb_transport_cancel.cpp  usb_transport_command.cpp  usb_transport_device.cpp  usb_transport_io.cpp  usb_transport_phantom_read.cpp  usb_transport_restart.cpp  usb_transport_rx_header.cpp  usb_transport_rx_payload.cpp  usb_transport_setup.cpp  usb_transport_spinup.cpp  usb_transport_threads.cpp  usb_transport_tx.cpp
dev/usb_transceiver_3/usb_transceiver_3/stuff/: libaio.h  logging.h  multitask.h  signal.h  unistd.h
local/dev/: CMakeLists.txt
local/dev/FirmwareConfigParser/: CMakeLists.txt  FirmwareConfig.json
local/dev/FirmwareConfigParser/src/: FirmwareConfigParser.cpp
local/dev/HBSEClient/: CMakeLists.txt
local/dev/HBSEClient/include/: HBSEClient.h
local/dev/HBSEClient/src/: HBSEClient.cpp  HBSEClient_stubs.cpp
local/dev/ICypher/: CMakeLists.txt
local/dev/ICypher/include/: Cypher.h  Platform.h  SP800_56B_KAS2.h  aes_ecb.h  c_aes_gcm.h  c_aes_tvec.h  c_bignum.h  c_bn_mul.h  c_dsa.h  c_dukpt.h  c_ecdsa.h  c_envelope.h  c_hmac_tvec.h  c_md.h  c_md_wrap.h  c_null.h  c_rand.h  c_rsa.h  c_sha1.h  c_sha256.h  c_sha256_tvec.h  c_sha512.h  c_sha512_tvec.h  c_x509.h  ctr_drbg.h  envelope_aes_gcm.h  envelope_aes_hmac.h  lumi_config.h  lumi_mem_mgr.h  sha512.h  stdafx.h
local/dev/ICypher/src/: Auto_Crypto_Objects.cpp  Platform.cpp  SP800_108_KDF_CTR_HMAC_SHA.cpp  SP800_56B_KAS2.cpp  SP800_56B_KAS2_self_test.cpp  aes_ecb_opt.cpp  base64.c  bignum.c  c_aes.cpp  c_aes_gcm.cpp  c_aes_gcm_self_test.cpp  c_aes_self_test.cpp  c_dsa_self_test.cpp  c_dukpt.cpp  c_ecdsa.cpp  c_ecdsa_self_test.cpp  c_envelope.cpp  c_hmac_self_test.cpp  c_null.cpp  c_rand.cpp  c_rand_self_test.cpp  c_rsa_self_test.cpp  c_sha1.cpp  c_sha512.cpp  c_sha512_self_test.cpp  c_x509.cpp  cipher.c  des.c  ecdsa.c  ecp.c  envelope_aes_gcm.c  envelope_aes_gcm_self_test.c  envelope_aes_hmac.c  envelope_aes_hmac_self_test.c  lumi_random.c  md_wrap.c  pem.c  pkparse.c  rsa.c  sha1.c  (+3 more)
local/dev/JEngineShell/: CMakeLists.txt
local/dev/JEngineShell/include/: FunctionLogger.h  JEngineShell.h  global.h
local/dev/TransCP001/include/: BaseTransBroker.h  CP001Broker.h  CmdExecutiveCP001.h  CryptoMgrCP001.h  ISELogger.h  ISensorInstance.h  IXServiceProvider.h
local/dev/TransCP001/src/: CP001Broker.cpp  CP001Broker_HID.cpp  CmdExecutiveCP001.cpp  CmdExecutiveCP001_HID.cpp  CryptoMgrCP001.cpp  CryptoMgrCP001_HID.cpp
local/dev/TransCommon/include/: CmdExecutiveCommon.h  CommonBroker.h  V100EncCmdCP001.h
local/dev/TransCommon/src/: CmdExecutiveCommon.cpp  CmdExecutiveCommon_HID.cpp  CommonBroker.cpp
local/dev/TransFS/include/: CmdExecutiveFS.h  FSBroker.h
local/dev/TransFS/src/: CmdExecutiveFS.cpp  FSBroker.cpp
local/dev/TransHYB02/include/: CmdExecutiveHYB02.h  CryptoMgrHYB02.h  HYB02Broker.h
local/dev/TransHYB02/src/: CmdExecutiveHYB02.cpp  CryptoMgrHYB02.cpp  HYB02Broker.cpp
local/dev/TransID/include/: CmdExecutiveID.h  IDBroker.h
local/dev/TransID/src/: CmdExecutiveID.cpp  IDBroker.cpp
local/dev/TransInternal/include/: CmdExecutiveInternal.h  InternalBroker.h
local/dev/TransInternal/src/: CmdExecutiveInternal.cpp  InternalBroker.cpp
local/dev/TransMSK00/include/: CmdExecutiveMSK00.h  CryptoMgrMSK00.h  EnrollSvcMSK00.h  MSK00Broker.h
local/dev/TransMSK00/src/: CmdExecutiveMSK00.cpp  CryptoMgrMSK00.cpp  EnrollSvcMSK00.cpp  MSK00Broker.cpp
local/dev/TransProvision/include/: CmdExecutiveProvision.h  CryptoMgrProvision.h  ProvisionBroker.h
local/dev/TransProvision/src/: CmdExecutiveProvision.cpp  CryptoMgrProvision.cpp  ProvisionBroker.cpp
local/dev/VCOMCrypto/: CMakeLists.txt  VCOMCrypto.vcxproj  VCOMCrypto.vcxproj.filters
local/dev/VCOMCrypto/src/: Device.cpp  ICmd.cpp  IEncCmd.cpp  TransportUSB.cpp  V100Cmd.cpp  VCOMBase.cpp  VCOMCrypto.cpp
local/dev/VirtualSecureElement/: CMakeLists.txt
local/dev/VirtualSecureElement/include/: VirtualSecureElement.h
local/dev/VirtualSecureElement/src/: HBSETransceiver.cpp  VirtualSecureElement.cpp
local/dev/api_common/include/: AppStateObserver.h  BioParameters.h  CExecStatus.h  CaptureStats.h  CmdExecutiveDefs.h  CriticalErrorLog.h  CryptoMgr.h  CryptoMgrDefs.h  DataMgr.h  EnrollSvc.h  IBSP.h  IEnrollSvc.h  far_lut.h
local/dev/api_common/src/: CaptureStats.cpp  CryptoMgr.cpp  CryptoMgrHid.cpp  DataMgr.cpp  EnrollSvc.cpp  IEnrollSvc.cpp  far_lut.cpp
local/dev/common/include/: AutoHeapBuffer.h  CommonCypherTypes.h  CypherTypes.h  FileStructure.h  HidOsTypes.h  HidTypes.h  ICmd.h  ICryptoBSP.h  ICypher.h  IEncCmd.h  IHidEncCmd.h  IMemMgr.h  ISecureElement.h  MemoryManager.h  PrintKey.h  StreamPrefix.h  V100Cmd.h  V100CommandHandler.h  V100EncCmd.h  V100IDCmd.h  V100InternalCmd.h  V100_enc_types.h  V100_internal_types.h  V100_key_cache.h  V100_shared_types.h  VcomBaseTypes.h  VirtualCryptCommon.h  const.h  lumi_endian.h  lumi_stdint.h  manufacturing_state.h  packunpack.h  parallel.h  usbcmdset.h
local/dev/common/src/: FileStructure.cpp  IMemMgr.cpp  MemoryManager.cpp  V100Cmd.cpp  V100EncCmd.cpp  V100IDCmd.cpp  V100InternalCmd.cpp  V100_HID.cpp
local/dev/hbcommon/: CMakeLists.txt
local/dev/hbcommon/include/: RemoteExec.h  base64.h  hbbmp.h  logging.h
local/dev/hbcommon/src/: RemoteExec.cpp  base64.cpp  hbbmp.cpp  logging.cpp
local/dev/libaio/: libaio.spec  log.txt
local/dev/libaio/harness/: main.c  runtests.sh
local/dev/libaio/man/: io.3  io_cancel.3  io_fsync.3  io_getevents.3  io_prep_fsync.3  io_prep_pread.3  io_prep_pwrite.3  (+6 more)
local/dev/socketComm/: CMakeLists.txt
local/dev/usb_transceiver_2/: CMakeLists.txt
local/dev/usb_transceiver_3/: CMakeLists.txt
local/sdk/CP001_common/: CMakeLists.txt
local/sdk/CP100_ProvisionUtility/: CMakeLists.txt  CP100_ProvisionUtility.vcxproj
local/sdk/ICypher/: CMakeLists.txt
local/sdk/VCOMCrypto/: CMakeLists.txt  VCOMCrypto.vcxproj  VCOMCrypto.vcxproj.filters
(+413 files in other folders)
