cmake_minimum_required(VERSION 3.4.1)
set(PROJECT_NAME "HBStandalone")
project(${PROJECT_NAME})
set(BASE_DIR .)

get_filename_component(BASE_DIR_ABSOLUTE ${BASE_DIR} ABSOLUTE)
set(STANDALONE_BATCH_BUILD 1)
add_definitions(-D_YOCTO_LINUX_)
message("===========SocketComm============")
add_subdirectory(socketComm socketCommLib)
message("===========hb_common==========")
add_subdirectory(hbcommon)
message("===========ICypher==========")
add_subdirectory(ICypher)
message("===========HBSEClient==========")
add_subdirectory(HBSEClient)
message("===========VirtualSecureElement==========")
add_subdirectory(VirtualSecureElement)
message("===========FirmwareConfigParser==========")
add_subdirectory(FirmwareConfigParser)
message("===========usb_transceiver==========")
add_subdirectory(usb_transceiver)
message("===========JEngineShell==========")
add_subdirectory(JEngineShell)

message("===========usb_transceiver==========")
add_subdirectory(usb_transceiver_3)
